refactor: 카테고리 인기과목 조회 로직 수정